testdata/language-features/basic-values/if03.reject.out
type error: can not unify
  /home/divip/.cabal/share/x86_64-linux-ghc-7.10.3/lambdacube-compiler-0.6.0.0/lc/Internals.lc:63:6:
  data Bool = False | True
       ^^^^
with
  ()
in testdata/language-features/basic-values/if03.reject.lc:1:13:
value1 = if () then () else ()
            ^^
------------ trace
!type error: can not unify
  /home/divip/.cabal/share/x86_64-linux-ghc-7.10.3/lambdacube-compiler-0.6.0.0/lc/Internals.lc:63:6:
  data Bool = False | True
       ^^^^
with
  ()
in testdata/language-features/basic-values/if03.reject.lc:1:13:
value1 = if () then () else ()
            ^^
------------ tooltips
testdata/language-features/basic-values/if03.reject.lc 1:13-1:15
    ()